hphp/hack/test/typecheck/shape30.php.legacy_decl.exp
File "shape30.php", line 11, characters 3-20:
Invalid assignment (Typing[4057])
File "shape30.php", line 10, characters 17-31:
The field 'y' is missing
File "shape30.php", line 10, characters 17-31:
The field 'y' is defined
